2006-04-08  Albert Chu  <chu11@llnl.gov>

	* libfreeipmi/src/: Support packet retransmissions and correct
	error codes.
	
2006-04-06  Albert Chu  <chu11@llnl.gov>

	* Add workaround notes to in-band tools about IBM e325.

	* tag Release-0_2_1
	
2006-04-05  Albert Chu  <chu11@llnl.gov>

	* libfreeipmi/src/ipmi-sel-record-types.c
	(get_sel_system_event_record): Fix output bug.
	
2006-04-04  Albert Chu  <chu11@llnl.gov>

	* configure.ac: Increment libfreeipmi revision due to smbios fix.

2006-04-03  Anand Babu  <ab@zresearch.com>

	* fish/extensions/sensors-common.scm: Closes bug# 16093. ipmi-sensors emiting wrong program name.
	* libfreeipmi/src/smbios-locate.c: SMBIOS record length check fix.k

2006-02-10  A Balamurugan  <bala@zresearch.com>

	* doc/freeipmi.texi: updated.

	* fish/bmc-config.8.pre.in: updated.

2006-02-10  A Balamurugan  <bala@zresearch.com>

	* ipmi-raw/src/ipmi-raw.c: bug fix of command hex bytes execution.

2006-02-09  A Balamurugan  <bala@zresearch.com>

	* doc/examples/Makefile.am: fix for bug #15689, to build non-inst
	examples.

	* doc/examples/udm-test.c: updated.

2006-02-09  A Balamurugan  <bala@zresearch.com>

	* freeipmi.spec.in: updated.

	* doc/examples/Makefile.am: updated.

2006-02-09  A Balamurugan  <bala@zresearch.com>

	* doc/examples/ipmi-lan-test.c: removed.

	* doc/examples/Makefile.example: updated.

	* doc/examples/udm-test.c: updated.

2006-02-09  Albert Chu  <chu11@llnl.gov>

	* configure.ac: Increment libfreeipmi version with release coming
	up.

2006-02-09  A Balamurugan  <bala@zresearch.com>

	* libfreeipmi/src/ipmi-lan-cmds.c,
	libfreeipmi/src/ipmi-pef-cmds.c, libfreeipmi/src/ipmi-sel-api.c,
	libfreeipmi/src/ipmi-sensor-api.c: fixed compiler warnings.

2006-02-09  Albert Chu  <chu11@llnl.gov>

	* libfreeipmi/src/ipmi-lan-cmds.h,
	libfreeipmi/src/ipmi-pef-cmds.h,
	libfreeipmi/src/ipmi-sdr-repo-cmds.h,
	libfreeipmi/src/ipmi-sel-cmds.h,
	libfreeipmi/src/ipmi-sensor-cmds.h,
	libfreeipmi/src/ipmi-serial-cmds.h,